--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -22,7 +22,7 @@
 }
 
 .b-page-header {
-	width: 841px;
+	width: 800px;
 	padding: 68px 0 0 0;
 	height: 232px;
 	text-align: center;
@@ -47,7 +47,7 @@
 }
 
 .b-page-content {
-	width: 841px;
+	width: 800px;
 	margin: 0 auto;
 }
 
@@ -58,11 +58,10 @@
 
 .news-item-image {
 	float: left;
-	margin: 0 0 0 38px;
 }
 
 .news-item-content {
-	padding: 0 0 0 238px;
+	padding: 0 0 0 200px;
 }
 
 .news-item-header {
@@ -77,7 +76,7 @@
 }
 
 .b-page-footer {
-	width: 841px;
+	width: 800px;
 	height: 94px;
 	padding: 14px 0 0 0;
 	margin: 93px auto 0;
@@ -99,7 +98,7 @@
 	text-align: center;
 	position: absolute;
 	top: -10px;
-	left: 0;
+	left: -40px;
 }
 
 .b-genre-label.scandal {
