--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -69,13 +69,13 @@ body {
 }
 
 .news-item-header {
-	font: 18px 'PT Sans', sans-serif;
+	font: 18px/21px 'PT Sans', sans-serif;
 	margin: 0;
 	text-decoration: underline;
 }
 
 .news-item-description {
-	margin: 6px 0 0 0;
+	margin: 7px 0 0 0;
 	font: 14px 'PT Sans', sans-serif;
 }
 
