--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -6,7 +6,8 @@ body {
 	width: 1181px;
 	position: relative;
 	margin: 0 auto;
-	padding: 10px 9px 0;
+	padding: 8px 9px 0;
+	border-top: 2px solid #000;
 }
 
 .page-label {
