--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -119,3 +119,31 @@ body {
 	margin: 82px auto 0;
 	border-top: 1px solid #8f8f8f;
 }
+
+.b-login-layer {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.login-window {
+	position: fixed;
+	padding: 36px 0 0 64px;
+	top: 50%;
+	left: 50%;
+	margin: -115px 0 0 -178px;
+	width: 310px;
+	height: 173px;
+	background: #fff;
+	box-shadow: 1px 0px 40px 7px #000;
+}
+
+.login-window .login-input {
+	width: 240px;
+	margin: 20px 0 0 0;
+	font: 14px/22px 'PT Sans', sans-serif;
+}
+
+
