--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -30,6 +30,7 @@ body {
 	font: 14px 'PT Sans', sans-serif;
 	border-bottom: 1px #666 dotted;
 	margin: 4px 0 0 0;
+	cursor: pointer;
 }
 
 .b-page-header {
