--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -35,10 +35,58 @@ body {
 	cursor: pointer;
 }
 
-.navigation-items {
-	margin: 0;
+.user-menu {
+	padding: 0 0 0 9px;
+	float: right;
+	width: 106px;
+	height: 21px;
+	border: 1px solid #a6a6a6;
+	overflow: hidden;
+	border-radius: 10px;
+	 -webkit-transition: all 0.5s ease;
+	background: #fefefe; /* Old browsers */
+	background: -moz-linear-gradient(top, #fefefe 0%, #dbdbdb 95%, #bebebe 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(95%,#dbdbdb), color-stop(100%,#bebebe)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#bebebe',GradientType=0 ); /* IE6-9 */
+}
+
+.user-menu:hover {
+	height: 105px;
+}
+
+.user-menu .user-name {
+	font: 14px/20px 'PT Sans', sans-serif;
+	text-shadow: 1px 1px 2px #fff;
+	color: #666666;
+}
+
+.user-menu .user-name .arrow {
+	font-size: 12px;
+}
+
+.user-menu .user-menu-items {
+	margin: 3px 0 0 17px;
 	padding: 0;
-	text-align: center;
+}
+
+.user-menu .user-menu-items .user-menu-item {
+	height: 28px;
+	padding: 0;
+	display: block;
+}
+
+.user-menu .user-menu-items .user-menu-item a {
+	color: #666666;
+	font: 14px 'PT Sans', sans-serif;
+}
+
+.navigation-items {
+	margin: 0 0 0 390px;
+	padding: 0;
 }
 
 .navigation-items .navigation-item {
@@ -126,6 +174,11 @@ body {
 	padding: 120px 0 0 0;
 }
 
+.news-article .news-note .news-note-image {
+	width: 179px;
+	margin: 0 0 22px 0;
+}
+
 .news-article .news-body {
 	width: 600px;
 	padding: 0 0 0 20px;
@@ -143,13 +196,13 @@ body {
 	color: #333333;
 }
 
-.old-news {
+.other-news {
 	height: 251px;
 	border-top: 3px solid  #b1b1b1;
 	padding: 0 0 33px 0;
 }
 
-.old-news .old-news-header {
+.other-news .other-news-header {
 	width: 179px;
 	float: left;
 	padding: 10px 0 0 0;
@@ -157,7 +210,26 @@ body {
 	font-weight: bold;
 }
 
+.other-news .other-news-items .other-news-item {
+	float: left;
+	width: 187px;
+	padding: 19px 0 0 20px;
+	display: block;
+}
+
+.other-news .other-news-items .other-news-item .other-news-link {
+	font: 14px 'PT Sans', sans-serif;
+	margin: 8px 0 0 0;
+}
+
+.other-news .other-news-items .other-news-item .other-news-prewiev {
+	font: 12px/16px 'PT Sans', sans-serif;
+	margin: 7px 0 0 0;
+	color: #333333;
+}
+
 .copyright {
+	margin: 0;
 	font: 12px 'PT Sans', sans-serif;
 	color: #666666;
 }
