edit js, included fonts

--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -1,3 +1,38 @@
+@font-face {
+    font-family: 'PT Sans';
+    src: url('../fonts/pts55f.eot');
+    src: url('../fonts/pts55f.eot') format('embedded-opentype'),
+         url('../fonts/pts55f.woff') format('woff'),
+         url('../fonts/pts55f.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'PT Sans';
+    src: url('../fonts/pts75f.eot');
+    src: url('../fonts/pts75f.eot') format('embedded-opentype'),
+         url('../fonts/pts75f.woff') format('woff'),
+         url('../fonts/pts75f.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'PT Sans';
+    src: url('../fonts/pts56f.eot');
+    src: url('../fonts/pts56f.eot') format('embedded-opentype'),
+         url('../fonts/pts56f.woff') format('woff'),
+         url('../fonts/pts56f.ttf') format('truetype');
+         font-style: italic;
+}
+
+@font-face {
+    font-family: 'PT Serif';
+    src: url('../fonts/pt_serif-web-bold.eot');
+    src: url('../fonts/pt_serif-web-bold.eot') format('embedded-opentype'),
+         url('../fonts/pt_serif-web-bold.woff') format('woff'),
+         url('../fonts/pt_serif-web-bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
 body {
 	background: url('../images/body-bg.png');
 }
@@ -65,7 +100,7 @@ body {
 }
 
 .user-menu .user-name .arrow {
-	font-size: 12px;
+	font-size: 10px;
 }
 
 .user-menu .user-menu-items {
