--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -231,7 +231,7 @@ body {
 	color: #333333;
 }
 
-.news-article .news-body .news-content {
+.news-article .news-body .news-content a {
 	color: #003366;
 }
 
