--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -203,7 +203,7 @@ body {
 }
 
 .news-article .news-note {
-	font: 10px/16px 'PT Sans', sans-serif;
+	font: 10px/16px 'Verdana', sans-serif;
 	color: #666666;
 	float: left;
 	width: 179px;
