--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -134,7 +134,8 @@ body {
 	color: #003366;
 }
 
-.navigation-items .navigation-item.active a {
+.navigation-items .navigation-item.active {
+	font: 14px/16px 'PT Sans', sans-serif;
 	color: #000;
 	text-decoration: none;
 	font-weight: bold;
