--- a/homework/hw_1/styles/test.css
+++ b/homework/hw_1/styles/test.css
@@ -32,7 +32,7 @@
          url('../fonts/pt_serif-web-bold.ttf') format('truetype');
     font-weight: bold;
 }
-
+/*
 body {
 	background: url('../images/body-bg.png');
 }
@@ -79,14 +79,14 @@ body {
 	overflow: hidden;
 	border-radius: 10px;
 	 -webkit-transition: all 0.5s ease;
-	background: #fefefe; /* Old browsers */
-	background: -moz-linear-gradient(top, #fefefe 0%, #dbdbdb 95%, #bebebe 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(95%,#dbdbdb), color-stop(100%,#bebebe)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#bebebe',GradientType=0 ); /* IE6-9 */
+	background: #fefefe; 
+	background: -moz-linear-gradient(top, #fefefe 0%, #dbdbdb 95%, #bebebe 100%); 
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefefe), color-stop(95%,#dbdbdb), color-stop(100%,#bebebe));
+	background: -webkit-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); 
+	background: -o-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); 
+	background: -ms-linear-gradient(top, #fefefe 0%,#dbdbdb 95%,#bebebe 100%); 
+	background: linear-gradient(to bottom, #fefefe 0%,#dbdbdb 95%,#bebebe 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#bebebe',GradientType=0 ); 
 }
 
 .user-menu:hover {
@@ -343,3 +343,4 @@ body {
 }
 
 
+*/
