--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -18,7 +18,8 @@ body {
 .page-label {
 	float: left;
 	text-transform: uppercase;
-	font: 17px/17px 'PT Sans', sans-serif;
+	font: 17px 'PT Sans', sans-serif;
+	line-height: 17px;
 	font-weight: bold;
 	text-decoration: none;
 	color: #000;
@@ -52,7 +53,7 @@ body {
 	}
 
 	.user-name {
-		font: 14px/20px 'PT Sans', sans-serif;
+		font: 14px 'PT Sans', sans-serif;
 		text-shadow: 1px 1px 2px #fff;
 		color: #666;
 
@@ -89,14 +90,16 @@ body {
 		padding: 0 15px 0 0;
 
 		&.active {
-			font: 14px/16px 'PT Sans', sans-serif;
+			font: 14px 'PT Sans', sans-serif;
+			line-height: 16px;
 			color: #000;
 			text-decoration: none;
 			font-weight: bold;
 		}
 
 		a {
-			font: 14px/16px 'PT Sans', sans-serif;
+			font: 14px'PT Sans', sans-serif;
+			line-height: 16px;
 			color: #003366;
 		}
 	}
@@ -117,7 +120,8 @@ body {
 	}
 
 	.page-header-title {
-		font: 18px/28px 'PT Sans', sans-serif;
+		font: 18px 'PT Sans', sans-serif;
+		line-height: 28px;
 
 		&.dotted {
 			background: url('../images/dotted.png') no-repeat center center;
@@ -147,7 +151,8 @@ body {
 				padding: 0 0 0 200px;
 
 				.news-item-header a{
-					font: 18px/21px 'PT Sans', sans-serif;
+					font: 18px 'PT Sans', sans-serif;
+					line-height: 21px;
 					margin: 0;
 					color: #000;
 				}
@@ -162,7 +167,8 @@ body {
 				height: 22px;
 				padding: 0 6px;
 				color: #fff;
-				font: 14px/25px 'PT Sans', sans-serif;
+				font: 14px 'PT Sans', sans-serif;
+				line-height: 25px;
 				font-style: italic;
 				text-align: center;
 				position: absolute;
@@ -193,7 +199,8 @@ body {
 	padding: 100px 0 72px 0;
 
 	.news-note {
-		font: 10px/16px 'Verdana', sans-serif;
+		font: 10px 'Verdana', sans-serif;
+		line-height: 16px;
 		color: #666;
 		float: left;
 		width: 179px;
@@ -216,7 +223,8 @@ body {
 		}
 
 		.news-content {
-			font: 14px/18px 'PT Sans', sans-serif;
+			font: 14px 'PT Sans', sans-serif;
+			line-height: 18px;
 			color: #333;
 
 			 a {
@@ -236,7 +244,8 @@ body {
 		width: 179px;
 		float: left;
 		padding: 8px 0 0 0;
-		font: 14px/18px 'PT Sans', sans-serif;
+		font: 14px 'PT Sans', sans-serif;
+		line-height: 18px;
 		font-weight: bold;
 	}
 
@@ -253,7 +262,8 @@ body {
 			}
 
 			.other-news-prewiev {
-				font: 12px/16px 'PT Sans', sans-serif;
+				font: 12px 'PT Sans', sans-serif;
+				line-height: 16px;
 				margin: 7px 0 0 0;
 				color: #333333;
 			}
@@ -304,7 +314,8 @@ body {
 		.login-window .login-input {
 			width: 240px;
 			margin: 20px 0 0 0;
-			font: 14px/22px 'PT Sans', sans-serif;
+			font: 14px 'PT Sans', sans-serif;
+			line-height: 22px;
 		}
 	}
 }
