fix defect wit login inputs style

--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -311,7 +311,7 @@ body {
 			width: 127px;
 		}
 
-		.login-window .login-input {
+		.login-input {
 			width: 240px;
 			margin: 20px 0 0 0;
 			font: 14px 'PT Sans', sans-serif;
