--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -44,9 +44,8 @@ body {
 .page-label {
 	float: left;
 	text-transform: uppercase;
-	font: 17px 'PT Sans', sans-serif;
+	font: bold 17px 'PT Sans', sans-serif;
 	line-height: 17px;
-	font-weight: bold;
 	text-decoration: none;
 	color: #000;
 }
@@ -116,11 +115,10 @@ body {
 		padding: 0 15px 0 0;
 
 		&.active {
-			font: 14px 'PT Sans', sans-serif;
+			font: bold 14px 'PT Sans', sans-serif;
 			line-height: 16px;
 			color: #000;
 			text-decoration: none;
-			font-weight: bold;
 		}
 
 		a {
@@ -140,9 +138,8 @@ body {
 	margin: 0 auto;
 
 	.page-head {
-		font: 72px 'PT Serif', serif;
+		font: bold 72px 'PT Serif', serif;
 		margin: 0;
-		font-weight: bold;
 	}
 
 	.page-header-title {
@@ -193,9 +190,8 @@ body {
 				height: 22px;
 				padding: 0 6px;
 				color: #fff;
-				font: 14px 'PT Sans', sans-serif;
+				font: italic 14px 'PT Sans', sans-serif;
 				line-height: 25px;
-				font-style: italic;
 				text-align: center;
 				position: absolute;
 				top: -10px;
@@ -244,8 +240,7 @@ body {
 
 		.news-header {
 			margin: 0 0 57px 0;
-			font: 24px 'PT Sans', sans-serif;
-			font-weight: bold;
+			font: bold 24px 'PT Sans', sans-serif;
 		}
 
 		.news-content {
@@ -270,9 +265,8 @@ body {
 		width: 179px;
 		float: left;
 		padding: 8px 0 0 0;
-		font: 14px 'PT Sans', sans-serif;
+		font: bold 14px 'PT Sans', sans-serif;
 		line-height: 18px;
-		font-weight: bold;
 	}
 
 	.other-news-items {
