--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -10,29 +10,33 @@
 
 @font-face {
  	.font-face(PT Sans, pts55f, normal, normal)
-}
-
-@font-face {
- .font-face(PT Sans, pts75f, bold, normal)
  }
 
 @font-face {
- .font-face(PT Sans, pts56f, normal, italic)
+ 	.font-face(PT Sans, pts75f, bold, normal)
  }
 
 @font-face {
- .font-face(PT Serif, pt_serif-web-bold, bold, normal)
+ 	.font-face(PT Sans, pts56f, normal, italic)
+ }
+
+@font-face {
+ 	.font-face(PT Serif, pt_serif-web-bold, bold, normal)
+ }
+
+* {
+	.transition(~"all 0.5s ease"); 
 }
 
 body {
 	background: url('../images/body-bg.png');
+	font: normal 100% 'PT Sans', sans-serif;
 }
 
 .b-page-wrapper {
-	width: 1181px;
+	width: 80%;											  				/* 1200px */
 	position: relative;
 	margin: 0 auto;
-	padding: 8px 9px 0;
 	border-top: 2px solid #000;
 
 	&.login {
@@ -42,10 +46,11 @@ body {
 }
 
 .page-label {
+	margin: 8px 0 0 9px;
 	float: left;
 	text-transform: uppercase;
-	font: bold 17px 'PT Sans', sans-serif;
-	line-height: 17px;
+	font: bold 1.0625em 'PT Sans', sans-serif; 			  				/* 17/16 = 1.0625 */
+	line-height: 1em;													
 	text-decoration: none;
 	color: #000;
 }
@@ -55,96 +60,27 @@ body {
 	float: right;
 	text-decoration: none;
 	color: #666;
-	font: 14px 'PT Sans', sans-serif;
+	font: 0.875em 'PT Sans', sans-serif; 				  				/* 14/16 = 0.875 */
 	border-bottom: 1px #666 dotted;
-	margin: 4px 0 0 0;
+	margin: 12px 9px 0 0;
 	cursor: pointer;
 }
 
-.user-menu {
-	padding: 0 0 0 9px;
-	float: right;
-	width: 108px;
-	height: 21px;
-	border: 1px solid #a6a6a6;
-	overflow: hidden;
-	.border-radius(10px);
-	
-	.transition(~"all 0.5s ease"); 
-	.gradient(~"linear-gradient(0deg, #fefefe 0%,#dbdbdb 95%,#bebebe 100%)");
-
-	&:hover{
-		height: 105px;
-	}
-
-	.user-name {
-		font: 14px 'PT Sans', sans-serif;
-		text-shadow: 1px 1px 2px #fff;
-		color: #666;
-
-		.arrow {
-			font-size: 9px;
-		}
-	}
-
-	.user-menu-items {
-		margin: 6px 0 0 17px;
-		padding: 0;
-
-		.user-menu-item {
-			height: 23px;
-			padding: 0;
-			display: block;
-
-			a {
-				color: #666;
-				font: 14px 'PT Sans', sans-serif;
-			}
-		}
-	}
-
-
-}
-
-.navigation-items {
-	margin: 0 0 0 390px;
-	padding: 0;
-	
-	.navigation-item {
-		display:inline-block;
-		padding: 0 15px 0 0;
-
-		&.active {
-			font: bold 14px 'PT Sans', sans-serif;
-			line-height: 16px;
-			color: #000;
-			text-decoration: none;
-		}
-
-		a {
-			font: 14px'PT Sans', sans-serif;
-			line-height: 16px;
-			color: #003366;
-		}
-	}
-}
-
-
 .b-page-header {
-	width: 800px;
+	width: 66.6666666666667%;									 		/* 800/1200 = 0.666666666666667 */
 	padding: 68px 0 0 0;
 	height: 232px;
 	text-align: center;
 	margin: 0 auto;
 
 	.page-head {
-		font: bold 72px 'PT Serif', serif;
+		font: bold 4.5em 'PT Serif', serif;              				/* 72/16 = 4.5 */
 		margin: 0;
 	}
 
 	.page-header-title {
 		font: 18px 'PT Sans', sans-serif;
-		line-height: 28px;
+		line-height: 1.75em;												/* 28/16 = 1.75 */
 
 		&.dotted {
 			background: url('../images/dotted.png') no-repeat center center;
@@ -156,7 +92,7 @@ body {
 }
 
 .b-page-content {
-	width: 800px;
+	width: 66.6666666666667%;									 		/* 800/1200 = 0.666666666666667 */
 	margin: 0 auto;
 
 	.news-items {
@@ -168,21 +104,26 @@ body {
 
 			.news-item-image {
 				float: left;
+				margin: 0 22px 20px 0;
 			}
 
 			.news-item-content {
 				padding: 0 0 0 200px;
-
-				.news-item-header a{
-					font: 18px 'PT Sans', sans-serif;
-					line-height: 21px;
+				
+				.news-item-header {
 					margin: 0;
-					color: #000;
+					line-height: 0.833333333333333333em;							/* 20/24 = 0.833333333333333333 */
+
+					a{
+						font: 0.75em 'PT Sans', sans-serif;	            		/* 18/24 = 1.125 */
+						margin: 0;
+						color: #000;
+					}
 				}
 
 				.news-item-description {
 					margin: 7px 0 0 0;
-					font: 14px 'PT Sans', sans-serif;
+					font: 0.875em 'PT Sans', sans-serif;	 				/* 14/16 = 0.875 */
 				}
 
 			}
@@ -190,8 +131,8 @@ body {
 				height: 22px;
 				padding: 0 6px;
 				color: #fff;
-				font: italic 14px 'PT Sans', sans-serif;
-				line-height: 25px;
+				font: italic 0.875em 'PT Sans', sans-serif; 				/* 14/16 = 0.875 */
+				line-height: 1.5625em;										/* 25/16 = 1.5625 */
 				text-align: center;
 				position: absolute;
 				top: -10px;
@@ -216,92 +157,18 @@ body {
 
 }
 
-
-.news-article {
-	padding: 100px 0 72px 0;
-
-	.news-note {
-		font: 10px 'Verdana', sans-serif;
-		line-height: 16px;
-		color: #666;
-		float: left;
-		width: 179px;
-		padding: 120px 0 0 0;
-
-		.news-note-image {
-			width: 179px;
-			margin: 0 0 16px 0;
-		}
-	}
-
-	.news-body {
-		width: 600px;
-		float: right;
-
-		.news-header {
-			margin: 0 0 57px 0;
-			font: bold 24px 'PT Sans', sans-serif;
-		}
-
-		.news-content {
-			font: 14px 'PT Sans', sans-serif;
-			line-height: 18px;
-			color: #333;
-
-			 a {
-				color: #003366;
-			}
-		}
-	}
-
-}
-
-
-.other-news {
-	padding: 0 0 24px 0;
-	border-top: 3px solid  #b1b1b1;
-
-	.other-news-header {
-		width: 179px;
-		float: left;
-		padding: 8px 0 0 0;
-		font: bold 14px 'PT Sans', sans-serif;
-		line-height: 18px;
-	}
-
-	.other-news-items {
-		.other-news-item {
-			float: left;
-			width: 187px;
-			padding: 4px 0 0 20px;
-			display: block;
-
-			.other-news-link {
-				font: 14px 'PT Sans', sans-serif;
-				margin: 8px 0 0 0;
-			}
-
-			.other-news-prewiev {
-				font: 12px 'PT Sans', sans-serif;
-				line-height: 16px;
-				margin: 7px 0 0 0;
-				color: #333333;
-			}
-		}
-	}
-}
-
 .b-page-footer {
-	width: 800px;
+	width: 66.6666666666667%;									 		/* 800/1200 = 0.666666666666667 */
 	height: 94px;
-	padding: 13px 0 0 3px;
+	padding: 10px 0 0 0;
 	margin: 0 auto;
 	border-top: 1px solid #8f8f8f;
 
 	.copyright {
 		margin: 0;
-		font: 12px 'PT Sans', sans-serif;
+		font: 0.75em 'PT Sans', sans-serif;								/* 12/16 = 0.75 */
 		color: #666;
+		padding: 3px;
 	}
 }
 
@@ -334,8 +201,8 @@ body {
 		.login-input {
 			width: 240px;
 			margin: 20px 0 0 0;
-			font: 14px 'PT Sans', sans-serif;
-			line-height: 22px;
+			font: 0.875em 'PT Sans', sans-serif; 						/* 14/16 = 0.875 */
+			line-height: 1.375em;											/* 22/16 = 1.375 */
 		}
 	}
 }
