fix defect with margin of cancel button

--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -66,6 +66,10 @@ body {
 	cursor: pointer;
 }
 
+.log-in-cancel {
+	margin: 4px 0 0 0;
+}
+
 .b-page-header {
 	width: 66.6666666666667%;									 		/* 800/1200 = 0.666666666666667 */
 	padding: 68px 0 0 0;
