--- a/homework/hw_1/less/style.less
+++ b/homework/hw_1/less/style.less
@@ -9,19 +9,19 @@
  }
 
 @font-face {
- 	.font-face(PT Sans, pts55f, normal, normal)
+ 	.font-face('PT Sans', 'pts55f', normal, normal)
  }
 
 @font-face {
- 	.font-face(PT Sans, pts75f, bold, normal)
+ 	.font-face('PT Sans', 'pts75f', bold, normal)
  }
 
 @font-face {
- 	.font-face(PT Sans, pts56f, normal, italic)
+ 	.font-face('PT Sans', 'pts56f', normal, italic)
  }
 
 @font-face {
- 	.font-face(PT Serif, pt_serif-web-bold, bold, normal)
+ 	.font-face('PT Serif', 'pt_serif-web-bold', bold, normal)
  }
 
 * {
@@ -62,7 +62,7 @@ body {
 	color: #666;
 	font: 0.875em 'PT Sans', sans-serif; 				  				/* 14/16 = 0.875 */
 	border-bottom: 1px #666 dotted;
-	margin: 12px 9px 0 0;
+	margin: 8px 9px 0 0;
 	cursor: pointer;
 }
 
