Complete first section

--- a/css/_common.less
+++ b/css/_common.less
@@ -1,9 +1,10 @@
+@import "_variables";
+
 html,
 body {
   width: 100%;
   height: 100%;
-  font-size: 100%;
-  line-height: 1.2em;
+  font: 100%/1.2 @lato;
   color: #000;
   background: #fff;
 }
