--- a/css/main.less
+++ b/css/main.less
@@ -1,4 +1,10 @@
 @import "_reset";
 @import "_common";
+
+@import "_fonts";
+@import "_variables";
+
+@import "_button";
+
 @import "_cover_section";
 
