--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-size: 100%;
-  line-height: 1.2em;
+  font: 100%/1.2 'Lato', Arial, sans-serif;
   color: #000;
   background: #fff;
 }
@@ -166,16 +165,72 @@ input[type="text"] {
   padding-right: 15px;
   box-sizing: border-box;
 }
+@font-face {
+  font-family: 'Lato';
+  src: url('../fonts/lato-black-webfont.eot');
+  src: url('../fonts/lato-black-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-black-webfont.woff2') format('woff2'), url('../fonts/lato-black-webfont.woff') format('woff'), url('../fonts/lato-black-webfont.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('../fonts/lato-bold-webfont.eot');
+  src: url('../fonts/lato-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-bold-webfont.woff2') format('woff2'), url('../fonts/lato-bold-webfont.woff') format('woff'), url('../fonts/lato-bold-webfont.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('../fonts/lato-light-webfont.eot');
+  src: url('../fonts/lato-light-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-light-webfont.woff2') format('woff2'), url('../fonts/lato-light-webfont.woff') format('woff'), url('../fonts/lato-light-webfont.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url('../fonts/lato-regular-webfont.eot');
+  src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/lato-regular-webfont.woff2') format('woff2'), url('../fonts/lato-regular-webfont.woff') format('woff'), url('../fonts/lato-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+.b-btn {
+  display: inline-block;
+  min-width: 204px;
+  padding-left: 16px;
+  padding-right: 16px;
+  height: 54px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 54px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  box-sizing: border-box;
+  border-radius: 27px;
+  cursor: pointer;
+  outline: none;
+  -webkit-transition: background-color .28s ease, color .28s ease;
+  -moz-transition: background-color .28s ease, color .28s ease;
+  -ms-transition: background-color .28s ease, color .28s ease;
+  -o-transition: background-color .28s ease, color .28s ease;
+  transition: background-color .28s ease, color .28s ease;
+}
+.b-btn._white {
+  background-color: #fff;
+  color: #3695ff;
+}
+.b-btn._white:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
 .b-cover-section {
-  padding-top: 100px;
-  padding-bottom: 150px;
-  min-height: 100vh;
   background: #3695ff url("../images/cover-section-bg.jpg") no-repeat center;
   background-size: cover;
   box-sizing: border-box;
 }
 .b-cover-section .content-size {
   position: relative;
+  padding-top: 100px;
+  padding-bottom: 140px;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
@@ -208,4 +263,26 @@ input[type="text"] {
   vertical-align: bottom;
   width: 100%;
   height: auto;
+}
+.b-cover-section .cover-section-caption {
+  margin-top: 60px;
+  font-size: 50px;
+  line-height: 60px;
+  font-weight: 900;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+}
+.b-cover-section .cover-section-button {
+  margin-top: 70px;
+  text-align: center;
+}
+.b-cover-section .cover-section-arrow {
+  position: absolute;
+  left: 50%;
+  bottom: 24px;
+  margin-left: -10px;
+  width: 20px;
+  height: 32px;
+  background: url("../images/svg/arrow-down.svg") no-repeat center;
 }
