--- a/css/_cover_section.less
+++ b/css/_cover_section.less
@@ -48,6 +48,7 @@
       margin-left: -20px/2;
       width: 20px;
       height: 32px;
+      opacity: .2;
       background: url("../images/svg/arrow-down.svg") no-repeat center;
     }
   }
