--- a/css/main.css
+++ b/css/main.css
@@ -284,5 +284,6 @@ input[type="text"] {
   margin-left: -10px;
   width: 20px;
   height: 32px;
+  opacity: .2;
   background: url("../images/svg/arrow-down.svg") no-repeat center;
 }
