--- a/css/main.less
+++ b/css/main.less
@@ -7,4 +7,8 @@
 @import "_button";
 
 @import "_cover_section";
+@import "_about_section";
+@import "_portfolio_section";
+@import "_clients_section";
+@import "_footer";
 
