--- a/alloka/style/style.scss
+++ b/alloka/style/style.scss
@@ -47,8 +47,6 @@
   position: fixed;
   width: 61px;
   height: 61px;
-  bottom: 30px;
-  right: 30px;
   background-color: #283961;
   border-radius: 30px;
   z-index: 99;
@@ -83,8 +81,6 @@
     border-radius: 50%;
     background-color: #b3f19a;
     position: absolute;
-    right: 25px;
-    bottom: -23px;
     cursor: pointer;
     user-select: none;
     box-shadow: 0 0 28px 6px rgba(179,241,154,.57);
@@ -103,8 +99,6 @@
     position: absolute;
     height: 61px;
     width: 61px;
-    bottom: 0;
-    left: 0;
 
     img {
       position: absolute;
@@ -117,8 +111,6 @@
   }
   >.calldrone-small-description {
     position: absolute;
-    left: 95px;
-    bottom: 10px;
     opacity: 0;
     transition: opacity .28s 0s ease;
   }
@@ -315,6 +307,65 @@
           display: table;
         }
       }
+    }
+  }
+
+//calldrone position
+
+  &.calldrone-right {
+    right: 30px;
+
+    .calldrone-main-button {
+      right: 25px;
+    }
+    .calldrone-main-logo {
+      left: 0;
+    }
+    >.calldrone-small-description {
+      left: 95px;
+    }
+  }
+  &.calldrone-left {
+    left: 30px;
+
+    .calldrone-main-button {
+      left: 25px;
+    }
+    .calldrone-main-logo {
+      right: 0;
+    }
+    >.calldrone-small-description {
+      right: 95px;
+    }
+    &.active .calldrone-big .calldrone-promotion {
+      left: inherit;
+      right: 36px;
+    }
+  }
+  &.calldrone-bottom {
+    bottom: 30px;
+
+    .calldrone-main-button {
+      bottom: -23px;
+    }
+    .calldrone-main-logo {
+      bottom: 0;
+    }
+    >.calldrone-small-description {
+      bottom: 10px;
+    }
+  }
+  &.calldrone-top {
+    top: 30px;
+
+    .calldrone-main-button {
+      bottom: -23px;
+    }
+    .calldrone-main-logo {
+      top: 0;
+    }
+    >.calldrone-small-description {
+      top: 10px;
     }
   }
 }
