--- a/alloka-landing/css/main.css
+++ b/alloka-landing/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -519,7 +518,8 @@ i {
             padding: 13px 0 0 75px;
             font-size: 17px;
             line-height: 22px;
-            background-color: #fff; }
+            background-color: #fff;
+            z-index: 999; }
             .main-wrapper .preview .content-wrapper .preview-slider .top-layer .layer-tip:after {
               content: url(../images/layer-tip-arrow.png);
               position: absolute;
@@ -540,32 +540,40 @@ i {
                 top: 16px;
                 border: 8px solid transparent;
                 border-left: 13px solid #fff; }
-        .main-wrapper .preview .content-wrapper .preview-slider .slider-tip {
-          display: none;
+        .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap {
+          opacity: 0;
           position: absolute;
-          width: 264px;
-          height: 60px;
-          border-radius: 4px;
-          font-size: 14px;
           bottom: 53px;
           left: 105px;
-          box-sizing: border-box;
-          padding: 12px 70px 0 20px;
-          line-height: 19px;
-          background-color: #000;
-          color: #fff;
           z-index: 99;
-          transform: scale(0.1);
-          transition: transform .3s ease; }
-          .main-wrapper .preview .content-wrapper .preview-slider .slider-tip:after {
-            content: url(../images/tip-arrow.png);
+          transition: opacity .28s ease; }
+          .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap .slider-tip {
             position: absolute;
-            right: 16px;
-            top: -20px; }
-          .main-wrapper .preview .content-wrapper .preview-slider .slider-tip.active {
-            transform: scale(1); }
-          .main-wrapper .preview .content-wrapper .preview-slider .slider-tip span {
-            font-weight: bold; }
+            left: 0;
+            top: -60px;
+            width: 264px;
+            border-radius: 4px;
+            font-size: 14px;
+            box-sizing: border-box;
+            padding: 12px 70px 10px 20px;
+            line-height: 19px;
+            background-color: #000;
+            color: #fff;
+            transform: scale(0);
+            transition: transform .28s ease; }
+            .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap .slider-tip:after {
+              content: url(../images/tip-arrow.png);
+              position: absolute;
+              right: 16px;
+              top: -20px; }
+            .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap .slider-tip.active {
+              display: block;
+              transform: scale(1);
+              transition: transform .5s ease .3s; }
+            .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap .slider-tip span {
+              font-weight: bold; }
+          .main-wrapper .preview .content-wrapper .preview-slider .slider-tip_wrap.active {
+            opacity: 1; }
         .main-wrapper .preview .content-wrapper .preview-slider .bg-triagle {
           position: absolute;
           bottom: 50px;
@@ -821,10 +829,15 @@ i {
           justify-content: space-between;
           align-items: center;
           padding: 75px 0 0 17px; }
-          .main-wrapper .functionality .content-wrapper .alloka-docs .partners-list img {
-            -webkit-filter: grayscale(1);
-            filter: gray;
-            filter: grayscale(1); }
+          .main-wrapper .functionality .content-wrapper .alloka-docs .partners-list .img-box {
+            position: relative; }
+            .main-wrapper .functionality .content-wrapper .alloka-docs .partners-list .img-box img:first-child {
+              position: absolute;
+              top: 0;
+              left: 0;
+              transition: opacity .3s ease; }
+            .main-wrapper .functionality .content-wrapper .alloka-docs .partners-list .img-box:hover img:first-child {
+              opacity: 0; }
         .main-wrapper .functionality .content-wrapper .alloka-docs .alloka-docs_links {
           padding-top: 72px; }
           .main-wrapper .functionality .content-wrapper .alloka-docs .alloka-docs_links .links-box {
@@ -843,7 +856,7 @@ i {
                 position: relative;
                 line-height: 64px; }
                 .main-wrapper .functionality .content-wrapper .alloka-docs .alloka-docs_links .links-box .button.comments-btn:before {
-                  content: 'Чтобы настроить свою интерацию';
+                  content: attr(data-text);
                   position: absolute;
                   font-size: 18px;
                   line-height: 1;
@@ -1032,7 +1045,7 @@ i {
             line-height: 50px;
             margin: 24px 0 0 -12px; }
       .main-wrapper .blogs .content-wrapper .blogs-content .news {
-        padding: 31px 0 0 82px; }
+        padding-left: 82px; }
         .main-wrapper .blogs .content-wrapper .blogs-content .news .news-block {
           padding-top: 16px; }
           .main-wrapper .blogs .content-wrapper .blogs-content .news .news-block .news_box {
@@ -1152,28 +1165,55 @@ body.header-fixed .main-wrapper .header {
 @media all and (max-width: 1540px) {
   .main-wrapper .preview {
     height: auto;
-    padding-bottom: 107px;
+    padding: 47px 0 107px;
     background-size: cover; }
-    .main-wrapper .preview .content-wrapper .preview-content .h3-title {
-      text-align: center;
-      max-width: 580px;
+    .main-wrapper .preview .content-wrapper {
       margin: 0 auto; }
-      .main-wrapper .preview .content-wrapper .preview-content .h3-title i.blue {
-        background: url("../images/marker-triple-color3.png") 156px 96% no-repeat, url("../images/marker-triple-color3-1.png") 100% 97% no-repeat; }
-        .main-wrapper .preview .content-wrapper .preview-content .h3-title i.blue .second,
-        .main-wrapper .preview .content-wrapper .preview-content .h3-title i.blue .third {
-          background: transparent; }
-    .main-wrapper .preview .content-wrapper .preview-content .preview-text {
-      margin: 27px auto 0;
-      text-align: center; }
-    .main-wrapper .preview .content-wrapper .preview-content .button {
-      margin: 34px auto 0; }
-    .main-wrapper .preview .content-wrapper .preview-content .time-info {
-      margin: 15px auto 0; }
-    .main-wrapper .preview .content-wrapper .preview-slider {
-      position: relative;
-      margin: 90px auto 0;
-      left: inherit;
-      top: inherit; }
-      .main-wrapper .preview .content-wrapper .preview-slider .owl-carousel {
-        position: absolute; } }
+      .main-wrapper .preview .content-wrapper .preview-content .h3-title {
+        text-align: center;
+        max-width: 100%;
+        margin: 0 auto;
+        font-weight: normal;
+        font-size: 48px; }
+        .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph {
+          display: block;
+          width: 950px; }
+          .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i {
+            padding: 0 5px;
+            font-weight: bold; }
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i .first,
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i .second,
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i .third {
+              background: transparent !important; }
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i.green {
+              background: url("../images/marker-triple-color1-0.png") 0 91% no-repeat, url("../images/marker-triple-color1-1.png") 100% 93% no-repeat; }
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i.red {
+              background: url("../images/marker-triple-color2-0.png") 3% 91% no-repeat, url("../images/marker-triple-color2-1.png") 100% 91% no-repeat; }
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i.blue {
+              background: url("../images/marker-triple-color3-0.png") 0 96% no-repeat, url("../images/marker-triple-color3-0.png") 100% 96% no-repeat; }
+            .main-wrapper .preview .content-wrapper .preview-content .h3-title .paragraph i.active {
+              display: inline-block !important; }
+      .main-wrapper .preview .content-wrapper .preview-content .content-inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 57px 46px 0; }
+        .main-wrapper .preview .content-wrapper .preview-content .content-inner .preview-text {
+          margin: 0;
+          text-align: right;
+          color: #000;
+          font-size: 15px;
+          line-height: 19px; }
+          .main-wrapper .preview .content-wrapper .preview-content .content-inner .preview-text span {
+            font-weight: bold; }
+        .main-wrapper .preview .content-wrapper .preview-content .content-inner .button {
+          margin: 0; }
+        .main-wrapper .preview .content-wrapper .preview-content .content-inner .time-info {
+          margin: 0; }
+      .main-wrapper .preview .content-wrapper .preview-slider {
+        position: relative;
+        margin: 70px auto 0;
+        left: inherit;
+        top: inherit; }
+        .main-wrapper .preview .content-wrapper .preview-slider .owl-carousel {
+          position: absolute; } }
